5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_820.log
== SUBMITION (2019-04-28 13:04:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.168881
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    nota50=valor // 50 = notas_R$50
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:05:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$50 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    nota50=valor // 50 = notas_R$50
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:05:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$50 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.166332
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    nota50=valor // 50 = notas_R$50
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:17:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas_R$50 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(nota50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.192736
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 14
    notas_R$50 = resto_R$50 // 10
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:20:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas_R$50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(nota50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.141764
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 14
    notas_R$50 = r1 // 10
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:21:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
nota50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas_R$50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.164043
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 14
    notas_R$50 = r1 // 10
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:23:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valornotas50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valornotas50 % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
nota2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.172515
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    valornotas50=valor // 50 
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:31:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valornotas50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valornotas50 % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.173239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    valornotas50=valor // 50 
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:33:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.184181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    n50=valor // 50 
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:34:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.18224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    n50=valor // 50 
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:34:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:34:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.193326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:35:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.131683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:35:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.16095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:36:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.140025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:36:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:38:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(resto10))
print(int(notas2))

-- EXECUTION TIME:
0.158464
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
2
8
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:38:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas50 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(resto10))
print(int(notas2))

-- OUTPUT:
2
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:39:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas10 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(int(notas50))
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:40:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50=valor//50 

# Valor restante a ser sacado com notas menores que R$ 50
r1= valor % 50

# Quantidade de notas de R$ 10
notas10 = r1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = r1 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(n50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.172132
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
